# webcamCaptureNewDesign

./: .astyle  .gitignore  CMakeLists.txt  INSTALL.md  README.md  astyle_all.bat  astyle_all.sh  webcamCaptureNewDesign.pro
build-webcamCaptureNewDesign-Desktop_Qt_5_4_1_MSVC2013_64bit_qt_54_w-Debug/: Makefile  Makefile.Debug  Makefile.Release
include/: BackendInterface.h  CameraInterface.h  Types.h  Utils.h  backend_factory.h  backend_implementation.h  backend_interface.h  camera_information.h  camera_interface.h  capability.h  format.h  frame.h  image_format_converter.h  new_capability.h  pixel_buffer.h  pixel_format.h  pixel_format_converter.h  unique_id.h  unique_id_interface.h  video_property.h  video_property_range.h
include/MediaFoundation/: MediaFoundation_Backend.h  MediaFoundation_Callback.h  MediaFoundation_Camera.h  MediaFoundation_Utils.h  media_foundation_backend.h  media_foundation_camera.h
include/media_foundation/: media_foundation_backend.h  media_foundation_callback.h  media_foundation_camera.h  media_foundation_utils.h
src/: CMakeLists.txt  Utils.cpp  backend_factory.cpp  capability_tree_builder.cpp  capability_tree_builder.h  unique_id.cpp  utils.cpp  utils.h
src/MediaFoundation/: MediaFoundation_Backend.cpp  MediaFoundation_Callback.cpp  MediaFoundation_Camera.cpp  MediaFoundation_Utils.cpp
src/av_foundation/: av_foundation_backend.cpp  av_foundation_backend.h  av_foundation_camera.cpp  av_foundation_camera.h  av_foundation_implementation.h  av_foundation_implementation.mm  av_foundation_interface.h  av_foundation_notifications_implementation.h  av_foundation_notifications_implementation.mm  av_foundation_notifications_interface.h  av_foundation_unique_id.cpp  av_foundation_unique_id.h  av_foundation_utils.cpp  av_foundation_utils.h
src/direct_show/: direct_show_backend.cpp  direct_show_backend.h  direct_show_callback.cpp  direct_show_callback.h  direct_show_camera.cpp  direct_show_camera.h  direct_show_unique_id.cpp  direct_show_unique_id.h  direct_show_utils.cpp  direct_show_utils.h  sample_grabber.h
src/media_foundation/: media_foundation_backend.cpp  media_foundation_backend.h  media_foundation_callback.cpp  media_foundation_callback.h  media_foundation_camera.cpp  media_foundation_camera.h  media_foundation_camera_notifications.cpp  media_foundation_camera_notifications.h  media_foundation_color_converter.cpp  media_foundation_color_converter.h  media_foundation_color_converter_transform.cpp  media_foundation_color_converter_transform.h  media_foundation_decompresser_transform.cpp  media_foundation_decompresser_transform.h  media_foundation_pixel_format_transform.cpp  media_foundation_pixel_format_transform.h  media_foundation_unique_id.cpp  media_foundation_unique_id.h  media_foundation_utils.cpp  media_foundation_utils.h
src/winapi_shared/: winapi_shared_camera_notifications.cpp  winapi_shared_camera_notifications.h  winapi_shared_unique_id.cpp  winapi_shared_unique_id.h
testApp/: webcamCaptureNewDesign.pro
test_app/: CMakeLists.txt  cameraform.cpp  cameraform.h  cameraform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  videoform.cpp  videoform.h  videoform.ui  webcamCaptureNewDesign.pro
